# qyaml

./: README.md  fyaml.py  qyaml.py  setup.cfg
.github/workflows/: python-app.yml  python-publish.yml
src/fyaml/: fyaml.py
src/qyaml/: __init__.py  __main__.py  qyaml.py
tests/: doctests.md
