[metadata]
name = qyaml-smartptr
version = 0.0.1
author = Michaël Petrov
author_email = smartptr@gmail.com
description = YAML query utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0x656b694d/qyaml
project_urls =
    Bug Tracker = https://github.com/0x656b694d/qyaml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6,<4
install_requires =
    PyYAML

[options.extras_require]
testing = PyYAML

[options.entry_points]
console_scripts =
    qyaml = qyaml:qyaml.main
    fyaml = fyaml:fyaml.main

[options.packages.find]
where = src

